--- a/.github/workflows/test_automation.yaml
+++ b/.github/workflows/test_automation.yaml
@@ -3,7 +3,7 @@ name: Integration Testing
 on:
   push:
     branches:
-      - main
+      - deployment
 
 jobs:
   test:
@@ -16,12 +16,11 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1.25'
+          php-version: '7.4'
 
       - name: Install Dependencies
         run: |
           composer install
 
-      - name: Run Tests
-        run: |
-          phpunit tests/
+      - name: Run PHPUnit tests
+        run: vendor/bin/phpunit
