Add missing argument to test runner in yaml workflow file

--- a/.github/workflows/test_automation.yaml
+++ b/.github/workflows/test_automation.yaml
@@ -24,4 +24,4 @@ jobs:
           composer install
 
       - name: Run PHPUnit tests
-        run: vendor/bin/phpunit
+        run: vendor/bin/phpunit tests
