Update workflow naming convention for first test cases and force tests to run on pull requests

--- a/.github/workflows/test_automation.yaml
+++ b/.github/workflows/test_automation.yaml
@@ -1,8 +1,8 @@
-name: Integration Testing
+name: Unit Testing
 
 on:
   workflow_dispatch:
-  push:
+  pull_request:
     branches:
       - deployment
 
