--- a/shopfast-react/package.json
+++ b/shopfast-react/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-react-app": "^7.0.1",
+    "jest": "^29.7.0"
   }
 }
