--- a/shopfast-react/package.json
+++ b/shopfast-react/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
     "eventsource": "^2.0.2",
     "fs": "^0.0.1-security",
     "markdown-it": "^14.0.0",
