--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "A brief description of your project",
     "type": "project",
     "require": {
-        "php": "^7.4"
+        "php": "^8.1.25",
+        "kreait/firebase-php": "^7.9"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.10"
