--- a/shopfast-react/package.json
+++ b/shopfast-react/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "eventsource": "^2.0.2",
     "fs": "^0.0.1-security",
+    "jwt-decode": "^4.0.0",
     "markdown-it": "^14.0.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
