--- a/shopfast-react/package.json
+++ b/shopfast-react/package.json
@@ -10,11 +10,13 @@
     "axios": "^1.6.5",
     "eventsource": "^2.0.2",
     "fs": "^0.0.1-security",
+    "gapi-script": "^1.2.0",
     "jwt-decode": "^4.0.0",
     "markdown-it": "^14.0.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
