--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": "^8.1.25",
         "firebase/php-jwt": "6.5.0",
         "google/apiclient": "^2.15",
-        "kreait/firebase-php": "^7.9"
+        "kreait/firebase-php": "^7.9",
+        "laravel/installer": "~4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.10"
