--- a/API/composer.json
+++ b/API/composer.json
@@ -21,6 +21,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "App\\Libraries\\": "app/Libraries/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
