--- a/speedcart-react/package.json
+++ b/speedcart-react/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-intersection-observer": "^9.5.3",
+    "react-recaptcha": "^2.3.10",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "sse-express": "^1.0.2",
