--- a/API/composer.json
+++ b/API/composer.json
@@ -22,6 +22,7 @@
         "psr-4": {
             "App\\": "app/",
             "App\\Libraries\\": "app/Libraries/",
+            "App\\Http\\Controllers\\": "app/Http/Controllers/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
