--- a/speedcart-react/package.json
+++ b/speedcart-react/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.5.3",
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^6.21.1",
