--- a/speedcart-react/package.json
+++ b/speedcart-react/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
 }
