--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -31,6 +31,10 @@ jobs:
         install -m 600 -D /dev/null ~/.ssh/id_rsa
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+    - name: Echo secrets to test (temporary)
+      run: |
+        echo "${{ secrets.SSH_USER }}"
+        echo "${{ secrets.SSH_HOST }}"
     - name: Connect to server and pull
       run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout development && git pull origin development"
     - name: Cleanup
