Add build script run to ssh step

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -38,6 +38,6 @@ jobs:
         ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
 
     - name: Connect to server and pull
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout development && git pull origin development"
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout development && git pull origin development && ./build.sh"
     - name: Cleanup
       run: rm -rf ~/.ssh
