Make front end rebuild whenever legal docs change too

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'speedcart-react/**'
+      - 'docs/legal/**'
 
 jobs:
   deploy:
@@ -25,11 +26,6 @@ jobs:
       env:
         CI: false
       run: cd speedcart-react && npm run build # This makes sure the build succeeds before running it on the production server
-
-    - name: Echo secrets to test (temporary)
-      run: |
-        echo "${{ secrets.SSH_USER }}"
-        echo "${{ secrets.SSH_HOST }}"
 
     - name: Install SSH Keys
       run: |
