Make database a volume so php containers are actually stateless (bug fix), adjust relevant file paths for context within API folder (fix for deployment command utility), and connect container images with Docker Hub (DevOps)

--- a/API/docker/nginx/Dockerfile
+++ b/API/docker/nginx/Dockerfile
@@ -5,13 +5,13 @@ FROM nginx:alpine
 WORKDIR /etc/nginx
 
 # Copy SSL certificates
-COPY ssl /etc/nginx/ssl
+COPY docker/nginx/ssl /etc/nginx/ssl
 
 # Copy Nginx configuration
-COPY conf.d /etc/nginx/conf.d
+COPY docker/nginx/conf.d /etc/nginx/conf.d
 
 # Copy Snippets
-COPY snippets /etc/nginx/snippets
+COPY docker/nginx/snippets /etc/nginx/snippets
 
 RUN ls -la /etc/nginx/snippets
 
