--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -17,6 +17,11 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.2'  # Adjust PHP version as needed
+    
+    - name: Create .env file
+      run: |
+        cd API
+        echo "${{ secrets.LARAVEL_ENV }}" > .env
 
     - name: Install Composer dependencies
       run: |
