--- a/speedcart-react/package.json
+++ b/speedcart-react/package.json
@@ -16,7 +16,6 @@
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.5.3",
     "react-recaptcha": "^2.3.10",
@@ -50,9 +49,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
-    "jest": "^29.7.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "jest": "^29.7.0"
   }
 }
