--- a/speedcart-react/package.json
+++ b/speedcart-react/package.json
@@ -15,6 +15,7 @@
     "markdown-it": "^14.0.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.5.3",
@@ -25,9 +26,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,9 +50,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "webpack": "^5.92.1"
   }
 }
