--- a/speedcart-react/package.json
+++ b/speedcart-react/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "sse-express": "^1.0.2",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
