Implement Issue #50 on backend

--- a/API/docker/nginx/conf.d/default.conf
+++ b/API/docker/nginx/conf.d/default.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     listen [::]:80;
     server_name api.speedcartapp.com;
+
+    # Redirect all HTTP requests to HTTPS
     return 301 https://$host$request_uri;
 }
 
@@ -10,6 +12,7 @@ server {
     listen [::]:443 ssl;
     server_name api.speedcartapp.com;
 
+    # SSL certificates
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
