Add migration command to automated backend deployment script to ensure any new migrations run

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -60,5 +60,6 @@ jobs:
         debug: true
         script: |
           cd ${{ secrets.DOCKER_COMPOSE_DIRECTORY }}
+          php artisan migrate
           docker-compose pull
           docker-compose up -d
