--- a/Frontend/Shared/package.json
+++ b/Frontend/Shared/package.json
@@ -1,14 +1,12 @@
 {
-    "name": "shared",
-    "version": "1.0.0",
-    "main": "index.js",
-    "types": "index.d.ts",
-    "scripts": {
-        "build": "tsc"
-    },
-    "dependencies": {},
-    "devDependencies": {
-        "@babel/preset-env": "^7.25.3",
-        "@babel/preset-react": "^7.24.7"
-    }
+  "name": "shared",
+  "version": "1.0.0",
+  "description": "",
+  "main": "./dist/index.js",
+  "scripts": {
+    "build": "babel src --out-dir dist && echo Success"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
