--- a/Frontend/Shared/.babelrc
+++ b/Frontend/Shared/.babelrc
@@ -1,3 +1,15 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"]
-}
+    "presets": ["@babel/preset-env", "@babel/preset-react"],
+    "plugins": [
+      "inline-dotenv",
+      [
+        "module-resolver",
+        {
+          "alias": {
+            "@constants": "./src/constants"
+          }
+        }
+      ]
+    ]
+  }
+  
