--- a/Frontend/speedcart-react-native/package.json
+++ b/Frontend/speedcart-react-native/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactnativeapp",
+  "name": "speedcart-react-native",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
