--- a/Frontend/speedcart-react/package.json
+++ b/Frontend/speedcart-react/package.json
@@ -1,33 +1,7 @@
 {
-  "name": "shopfast-react",
+  "name": "speedcart-react",
   "version": "0.8.0",
   "private": true,
-  "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@react-oauth/google": "^0.12.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.5",
-    "eventsource": "^2.0.2",
-    "fs": "^0.0.1-security",
-    "gapi-script": "^1.2.0",
-    "jwt-decode": "^4.0.0",
-    "markdown-it": "^14.0.0",
-    "node-fetch": "^3.3.2",
-    "react": "^18.2.0",
-    "react-app-rewired": "^2.2.1",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
-    "react-intersection-observer": "^9.5.3",
-    "react-recaptcha": "^2.3.10",
-    "react-router-dom": "^6.21.1",
-    "react-scripts": "^5.0.1",
-    "sse-express": "^1.0.2",
-    "uuid": "^10.0.0",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
@@ -51,16 +25,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/preset-react": "^7.24.7",
-    "babel-plugin-module-resolver": "^5.0.2",
-    "eslint": "^8.56.0",
-    "eslint-config-react-app": "^7.0.1",
-    "jest": "^29.7.0",
-    "webpack": "^5.92.1"
   }
 }
