--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -20,7 +20,7 @@ jobs:
         node-version: '21.6.0'
 
     - name: Install dependencies
-      run: cd speedcart-react && npm install --force
+      run: cd Frontend/speedcart-react && npm install --force
 
     - name: Build front end
       env:
