Update jsconfig.json path for shared package

--- a/Frontend/speedcart-react/jsconfig.json
+++ b/Frontend/speedcart-react/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "shared/*": ["../Shared/src/*"]
+      "shared/*": ["../shared/src/*"]
     }
   },
   "include": ["src/**/*"]
