Finalize fixes for React Native app and testing shared package for Issue #53

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,11 +8,14 @@
   ],
   "scripts": {
     "start": "npm start --workspace speedcart-react",
+    "start-native": "cd speedcart-react-native && npm start",
     "build": "npm run build --workspace shared && npm run build --workspace speedcart-react"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-native-google-signin/google-signin": "^13.0.1",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +23,8 @@
     "axios": "^1.6.5",
     "dotenv": "^16.4.5",
     "eventsource": "^2.0.2",
+    "expo": "~51.0.31",
+    "expo-status-bar": "~1.12.1",
     "fs": "^0.0.1-security",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^4.0.0",
@@ -28,16 +33,16 @@
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
-    "react": "^18.3.1",
+    "react": "18.2.0",
     "react-app-rewired": "^2.2.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.5.3",
+    "react-native": "0.74.5",
     "react-native-web": "^0.19.12",
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
-    "shared": "^1.0.0",
     "sse-express": "^1.0.2",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
