--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -63,6 +63,7 @@
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
     "jest": "^29.7.0",
+    "tsc-alias": "^1.8.10",
     "typescript": "^4.9.5",
     "webpack": "^5.92.1"
   },
