--- a/Frontend/shared/tsconfig.json
+++ b/Frontend/shared/tsconfig.json
@@ -12,8 +12,10 @@
       "outDir": "./dist",
       "rootDir": "./src",
       "strict": true,
+      "strictNullChecks": false,
       "moduleResolution": "node",
       "esModuleInterop": true,
+      "resolveJsonModule": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true
     },
