--- a/Frontend/shared/tsconfig.json
+++ b/Frontend/shared/tsconfig.json
@@ -12,6 +12,7 @@
       "outDir": "./dist",
       "rootDir": "./src",
       "strict": true,
+      "declaration": true,
       "strictNullChecks": false,
       "moduleResolution": "node",
       "esModuleInterop": true,
